# opteval

./: Cargo.toml  README.md  rustfmt.toml
src/: main.rs  parsing.rs
src/vm/: mod.rs  term.rs  tests.rs
src/vm/inet/: base.rs  interaction.rs  mod.rs  util.rs
src/vm/inet/arena/: encode.rs  mod.rs
src/vm/oracle/: field.rs  group.rs  hash.rs  id.rs  mod.rs  oracle.rs  order.rs  scope.rs
src/vm/oracle/hash/: mod.rs
src/vm/tests/: mod.rs  parsing.rs
