[package]
name = "freya-bootstrap"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/freya-lang/freya-bootstrap/"
description = "bootstrap compiler for freya"

[lints.rust]
ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
impl_trait_redundant_captures = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
rust_2018_idioms = "deny"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
# unqualified_local_imports = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_crate_dependencies = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
